tests/ui/traits/next-solver/overflow/recursion-limit-zero-issue-115351.stderr
error[E0275]: overflow evaluating the requirement `Self: Trait`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "2"]` attribute to your crate (`recursion_limit_zero_issue_115351`)

error[E0275]: overflow evaluating the requirement `Self well-formed`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "2"]` attribute to your crate (`recursion_limit_zero_issue_115351`)

error[E0275]: overflow evaluating the requirement `u32: Trait`
  --> $DIR/recursion-limit-zero-issue-115351.rs:10:16
   |
LL | impl Trait for u32 {}
   |                ^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "2"]` attribute to your crate (`recursion_limit_zero_issue_115351`)

error[E0275]: overflow evaluating the requirement `u32 well-formed`
  --> $DIR/recursion-limit-zero-issue-115351.rs:10:16
   |
LL | impl Trait for u32 {}
   |                ^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "2"]` attribute to your crate (`recursion_limit_zero_issue_115351`)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0275`.
